--- a/src/styles/components/Button.scss
+++ b/src/styles/components/Button.scss
@@ -19,6 +19,7 @@ $btn-prefix-cls: $css-prefix + 'btn';
     color: $black;
     background-color: $gray;
     background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
+    text-align: center;
 
     &-default-size {
         padding: $btn-padding-default;
@@ -27,6 +28,10 @@ $btn-prefix-cls: $css-prefix + 'btn';
     &-small-size {
         padding: $btn-padding-small;
         font-size: $font-size-small;
+    }
+    &-large-size {
+        padding: 0.75em 1.25em;
+        font-size: inherit;
     }
     &-default {
         &:hover {
@@ -59,6 +64,21 @@ $btn-prefix-cls: $css-prefix + 'btn';
             background-color: $success-active;
             background-image: none;
             border-color: $border-active-color;
+            box-shadow: $box-shadow-inset;
+        }
+    }
+    &-primary {
+        color: $primary;
+        background-color: $white;
+        background-image: none;
+        &:hover {
+            background-color: $primary;
+            background-image: none;
+            background-position: -0.5em;
+            border-color: $primary;
+            color: $white;
+        }
+        &:active {
             box-shadow: $box-shadow-inset;
         }
     }
