--- a/src/styles/components/ButtonGroup.scss
+++ b/src/styles/components/ButtonGroup.scss
@@ -1,3 +1,17 @@
 @charset "UTF-8";
 
-$btn-prefix-cls: $css-prefix + 'btn';
+$btn-group-prefix-cls: $css-prefix + 'btn-group';
+.#{$btn-group-prefix-cls} {
+    .#{$btn-prefix-cls} {
+        margin: 0 -3px;
+        border-radius: 0;
+        &:first-child {
+            border-top-left-radius: 3px;
+            border-bottom-left-radius: 3px;
+        }
+        &:last-child {
+            border-top-right-radius: 3px;
+            border-bottom-right-radius: 3px;
+        }
+    }
+}
