:sparkles: 引入新特性  新增card

--- a/scripts/templates/components/name.scss
+++ b/scripts/templates/components/name.scss
@@ -1,3 +1,6 @@
 @charset "UTF-8";
 
-$btn-prefix-cls: $css-prefix + 'btn';
+${{__py_component_class_name__}}-prefix-cls: $css-prefix + '{{__py_component_class_name__}}';
+
+.#{${{__py_component_class_name__}}-prefix-cls} {
+}
