--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,4 +1,6 @@
 @import 'Button.scss';
 @import 'ButtonGroup.scss';
+@import 'Card.scss';
 @import 'Input.scss';
 @import 'Page.scss';
+@import 'Select.scss';
