--- a/src/styles/components/Button.scss
+++ b/src/styles/components/Button.scss
@@ -14,7 +14,7 @@ $btn-prefix-cls: $css-prefix + 'btn';
     background-size: 110% 110%;
     border: 1px solid rgba(27, 31, 35, 0.2);
     line-height: 20px;
-    border-radius: 0.25em;
+    border-radius: $border-radio-normal;
     appearance: none;
     color: $black;
     background-color: $gray;
