--- a/src/styles/components/Input.scss
+++ b/src/styles/components/Input.scss
@@ -4,7 +4,7 @@ $input-prefix-cls: $css-prefix + 'input';
     padding: $input-padding;
     line-height: 20px;
     border: 1px solid #d1d5da;
-    border-radius: 3px;
+    border-radius: 6px;
     font-size: 14px;
     outline: none;
     color: $black;
@@ -12,10 +12,10 @@ $input-prefix-cls: $css-prefix + 'input';
     background-repeat: no-repeat;
     background-position: right 8px center;
     border: 1px solid #d1d5da;
-    border-radius: 3px;
     &:focus {
-        box-shadow: inset 0 1px 2px rgba(27, 31, 35, 0.075),
-            0 0 0 0.2em rgba(3, 102, 214, 0.3);
+        border-color: #0366d6;
+        outline: none;
+        box-shadow: 0 0 0 3px rgba(3,102,214,.3);
     }
 }
 ::-webkit-input-placeholder {
