--- a/components/page.html
+++ b/components/page.html
@@ -7,7 +7,7 @@
     <meta name="generator" content="VuePress 1.4.1">
     
     <meta name="description" content="一款简单丰富易用的vue前端组件">
-    <link rel="preload" href="/github-ui/assets/css/0.styles.25e266ba.css" as="style"><link rel="preload" href="/github-ui/assets/js/app.9369bf6e.js" as="script"><link rel="preload" href="/github-ui/assets/js/2.59ac9ca2.js" as="script"><link rel="preload" href="/github-ui/assets/js/3.dbe30443.js" as="script"><link rel="preload" href="/github-ui/assets/js/11.7231417b.js" as="script"><link rel="prefetch" href="/github-ui/assets/js/10.ab903b54.js"><link rel="prefetch" href="/github-ui/assets/js/12.13eae2b6.js"><link rel="prefetch" href="/github-ui/assets/js/13.8dfd72e1.js"><link rel="prefetch" href="/github-ui/assets/js/4.71810396.js"><link rel="prefetch" href="/github-ui/assets/js/5.652e92fe.js"><link rel="prefetch" href="/github-ui/assets/js/6.a813fbab.js"><link rel="prefetch" href="/github-ui/assets/js/7.809c4019.js"><link rel="prefetch" href="/github-ui/assets/js/8.4f27b8a3.js"><link rel="prefetch" href="/github-ui/assets/js/9.98eda8a8.js">
+    <link rel="preload" href="/github-ui/assets/css/0.styles.25e266ba.css" as="style"><link rel="preload" href="/github-ui/assets/js/app.9f02e838.js" as="script"><link rel="preload" href="/github-ui/assets/js/2.6f7302d9.js" as="script"><link rel="preload" href="/github-ui/assets/js/3.380527e6.js" as="script"><link rel="preload" href="/github-ui/assets/js/12.7d91906c.js" as="script"><link rel="prefetch" href="/github-ui/assets/js/10.1132e787.js"><link rel="prefetch" href="/github-ui/assets/js/11.5143ad11.js"><link rel="prefetch" href="/github-ui/assets/js/13.b43bd548.js"><link rel="prefetch" href="/github-ui/assets/js/14.4b716c1f.js"><link rel="prefetch" href="/github-ui/assets/js/4.04945aee.js"><link rel="prefetch" href="/github-ui/assets/js/5.788da481.js"><link rel="prefetch" href="/github-ui/assets/js/6.cc55a759.js"><link rel="prefetch" href="/github-ui/assets/js/7.244035bc.js"><link rel="prefetch" href="/github-ui/assets/js/8.3f120fd5.js"><link rel="prefetch" href="/github-ui/assets/js/9.9aad7163.js">
     <link rel="stylesheet" href="/github-ui/assets/css/0.styles.25e266ba.css">
   </head>
   <body>
@@ -45,6 +45,6 @@
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/github-ui/assets/js/app.9369bf6e.js" defer></script><script src="/github-ui/assets/js/2.59ac9ca2.js" defer></script><script src="/github-ui/assets/js/3.dbe30443.js" defer></script><script src="/github-ui/assets/js/11.7231417b.js" defer></script>
+    <script src="/github-ui/assets/js/app.9f02e838.js" defer></script><script src="/github-ui/assets/js/2.6f7302d9.js" defer></script><script src="/github-ui/assets/js/3.380527e6.js" defer></script><script src="/github-ui/assets/js/12.7d91906c.js" defer></script>
   </body>
 </html>
